--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,16 @@ body,
   /* Login */
   /* Termina Login */
   /* Wrapper */
+  /*vista panel de control*/
+  /*FIN vista panel de control*/
   /* Dashboard contenido interno */ }
   body main,
   * main {
     display: block;
     overflow: hidden; }
+  body .mt-10,
+  * .mt-10 {
+    margin-top: 10px; }
   body .color-azul-f,
   * .color-azul-f {
     color: var(--color-azul-f); }
@@ -274,6 +279,37 @@ body,
             body .wrapper .navbar-static-side .nav-aside li a:hover,
             * .wrapper .navbar-static-side .nav-aside li a:hover {
               background: #FFE575; }
+              
+  /*vista panel de control*/
+  body .btn-delete,
+  * .btn-delete {
+    margin: auto;
+    background: black;
+    border: none;
+    margin-top: 20px;
+    cursor: pointer; }
+  body .btn-cancel,
+  * .btn-cancel {
+    margin-left: 20px;
+    background-color: black;
+    border: none;
+    color: white;
+    border-radius: 15px;
+    padding: 5px 35px; }
+    body .btn-cancel:hover,
+    * .btn-cancel:hover {
+      background: #232323;
+      -webkit-box-shadow: 3px 3px 12px -2px #00000036;
+              box-shadow: 3px 3px 12px -2px #00000036; }
+  body #img-icon,
+  * #img-icon {
+    overflow: hidden;
+    -webkit-transition: .5s;
+    transition: .5s; }
+    body #img-icon:hover,
+    * #img-icon:hover {
+      -webkit-transform: scale(1.3);
+      transform: scale(1.3); }
   body .form-container,
   * .form-container {
     width: 100%;
