--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,9 @@ body,
 
 
     /* Utilidades */
+    .mt-10{
+        margin-top: 10px;
+    }
     .color-azul-f {
         color: var(--color-azul-f);
     }
@@ -82,8 +85,7 @@ body,
             color: #111 !important;
         }
     }
-
-    .btn-primary {
+      .btn-primary {
         background: $color-blue!important;
         border: none;
         border-radius: 15px;
@@ -265,6 +267,38 @@ body,
             }
         }
     }
+
+    /*vista panel de control*/
+    .btn-delete{
+        margin: auto;
+        background: black;
+        border: none;
+        margin-top: 20px;
+        cursor: pointer;
+    }
+    .btn-cancel{
+        margin-left: 20px;
+        background-color: black;
+        border: none;
+        color: white;
+        border-radius: 15px;
+        padding: 5px 35px;
+
+        &:hover{
+            background: #232323;
+            box-shadow: 3px 3px 12px -2px #00000036;
+        }
+    }
+    #img-icon{
+        overflow:hidden;
+        transition: .5s;
+
+        &:hover{
+            -webkit-transform:scale(1.3);
+            transform:scale(1.3);
+        }
+    }
+     /*FIN vista panel de control*/
 
 
     .form-container {
