--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body,
   /* Wrapper */
   /*vista panel de control*/
   /*FIN vista panel de control*/
+  /*tabla admin*/
   /* Dashboard contenido interno */ }
   body main,
   * main {
@@ -279,8 +280,6 @@ body,
             body .wrapper .navbar-static-side .nav-aside li a:hover,
             * .wrapper .navbar-static-side .nav-aside li a:hover {
               background: #FFE575; }
-              
-  /*vista panel de control*/
   body .btn-delete,
   * .btn-delete {
     margin: auto;
@@ -305,11 +304,18 @@ body,
   * #img-icon {
     overflow: hidden;
     -webkit-transition: .5s;
-    transition: .5s; }
+    transition: .5s;
+    cursor: pointer; }
     body #img-icon:hover,
     * #img-icon:hover {
       -webkit-transform: scale(1.3);
       transform: scale(1.3); }
+  body .w-7,
+  * .w-7 {
+    width: 70%; }
+  body .table .table-striped th td,
+  * .table .table-striped th td {
+    border: none !important; }
   body .form-container,
   * .form-container {
     width: 100%;
