--- a/scss/style.scss
+++ b/scss/style.scss
@@ -292,13 +292,22 @@ body,
     #img-icon{
         overflow:hidden;
         transition: .5s;
+        cursor: pointer;
 
         &:hover{
             -webkit-transform:scale(1.3);
             transform:scale(1.3);
         }
     }
+    .w-7{
+        width: 70%;
+    }
      /*FIN vista panel de control*/
+
+    /*tabla admin*/
+    .table .table-striped th td{
+        border: none !important;
+    }
 
 
     .form-container {
