--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@ body,
   /* Header */
   /* Login */
   /* Termina Login */
+  /* Drag&Drop */
+  /* Termina Drag&Drop */
   /* Wrapper */
   /*vista panel de control*/
   /*FIN vista panel de control*/
@@ -243,6 +245,14 @@ body,
   body .container__vh100,
   * .container__vh100 {
     height: 100vh; }
+  body .c-dropzone,
+  * .c-dropzone {
+    height: 130px;
+    border-radius: 15px;
+    border: 2px dashed #d1d1d1; }
+    body .c-dropzone p,
+    * .c-dropzone p {
+      color: #808080; }
   body .wrapper,
   * .wrapper {
     width: 100%;
@@ -370,6 +380,10 @@ body,
     * header span {
       margin-left: 6rem;
       font-size: 22px; } }
+  @media screen and (max-width: 570px) {
+    body .c-dropzone,
+    * .c-dropzone {
+      height: auto; } }
   body .tooltip-inner,
   * .tooltip-inner {
     background-color: #FDCF11;
