--- a/scss/style.scss
+++ b/scss/style.scss
@@ -243,6 +243,17 @@ body,
 
     /* Termina Login */
 
+    /* Drag&Drop */
+    .c-dropzone{
+       height: 130px; 
+       border-radius: 15px;
+       border:2px dashed rgb(209, 209, 209);
+       p{
+        color: $color-grey;
+       }
+    }
+    /* Termina Drag&Drop */
+
 
     /* Wrapper */
     .wrapper {
@@ -373,7 +384,15 @@ body,
                 font-size: 22px;
             }   
         }
+    }    
+    
+    @media screen and(max-width:570px) {
+        .c-dropzone{
+            height: auto; 
+         }
     }
+
+
 
 
     .tooltip-inner {
