--- a/css/style.css
+++ b/css/style.css
@@ -321,14 +321,14 @@ body,
       background: #232323;
       -webkit-box-shadow: 3px 3px 12px -2px #00000036;
               box-shadow: 3px 3px 12px -2px #00000036; }
-  body #img-icon,
-  * #img-icon {
+  body .img-icon,
+  * .img-icon {
     overflow: hidden;
     -webkit-transition: .5s;
     transition: .5s;
     cursor: pointer; }
-    body #img-icon:hover,
-    * #img-icon:hover {
+    body .img-icon:hover,
+    * .img-icon:hover {
       -webkit-transform: scale(1.3);
       transform: scale(1.3); }
   body .table .table-striped th td,
@@ -350,7 +350,12 @@ body,
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
-      font-size: 20px; }
+      font-size: 20px;
+      display: flex;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      align-items: center; }
   body .c-pcontrol,
   * .c-pcontrol {
     width: 70px; }
