--- a/scss/style.scss
+++ b/scss/style.scss
@@ -321,11 +321,10 @@ body,
         }
     }
 
-    #img-icon {
+    .img-icon {
         overflow: hidden;
         transition: .5s;
         cursor: pointer;
-
         &:hover {
             -webkit-transform: scale(1.3);
             transform: scale(1.3);
@@ -352,6 +351,9 @@ body,
             display: flex;
             align-items: center;
             font-size: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
     }
 
